logs/dag_id=weather_dag_api/run_id=scheduled__2023-04-26T00:00:00+00:00/task_id=cities.insert_data_Lviv/attempt=1.log
[2023-04-27T07:06:21.587+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Lviv scheduled__2023-04-26T00:00:00+00:00 [queued]>
[2023-04-27T07:06:22.656+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Lviv scheduled__2023-04-26T00:00:00+00:00 [queued]>
[2023-04-27T07:06:22.679+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-04-27T07:06:22.686+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-04-27T07:06:22.701+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-04-27T07:06:24.141+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): cities.insert_data_Lviv> on 2023-04-26 00:00:00+00:00
[2023-04-27T07:06:24.425+0000] {standard_task_runner.py:55} INFO - Started process 746 to run task
[2023-04-27T07:06:24.671+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather_dag_api', 'cities.insert_data_Lviv', 'scheduled__2023-04-26T00:00:00+00:00', '--job-id', '125', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag_api.py', '--cfg-path', '/tmp/tmpzfwy71eb']
[2023-04-27T07:06:24.693+0000] {standard_task_runner.py:83} INFO - Job 125: Subtask cities.insert_data_Lviv
[2023-04-27T07:07:06.507+0000] {task_command.py:389} INFO - Running <TaskInstance: weather_dag_api.cities.insert_data_Lviv scheduled__2023-04-26T00:00:00+00:00 [running]> on host 80d943d8f5b4
[2023-04-27T07:07:14.772+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weather_dag_api
AIRFLOW_CTX_TASK_ID=cities.insert_data_Lviv
AIRFLOW_CTX_EXECUTION_DATE=2023-04-26T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-04-26T00:00:00+00:00
[2023-04-27T07:07:14.791+0000] {sql.py:254} INFO - Executing: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed, location) 
				VALUES ('2023-04-26T05:20:00Z',
				5.7,
				0.4,
				5.8,
				'Lviv)';
[2023-04-27T07:07:14.935+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-27T07:07:30.583+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-27T07:07:30.793+0000] {sql.py:375} INFO - Running statement: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed, location) 
				VALUES ('2023-04-26T05:20:00Z',
				5.7,
				0.4,
				5.8,
				'Lviv)';, parameters: None
[2023-04-27T07:07:30.975+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 6:     'Lviv)';
                   ^

[2023-04-27T07:07:31.753+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=weather_dag_api, task_id=cities.insert_data_Lviv, execution_date=20230426T000000, start_date=20230427T070621, end_date=20230427T070731
[2023-04-27T07:07:32.360+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 125 for task cities.insert_data_Lviv (syntax error at or near ";"
LINE 6:     'Lviv)';
                   ^
; 746)
[2023-04-27T07:07:32.983+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-27T07:07:34.421+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
